Fix overlap of error message and tweak the selects

--- a/src/App.css
+++ b/src/App.css
@@ -329,7 +329,7 @@ picture {
 }
 
 .reserve-form .error-messages {
-  height: 3rem;
+  height: 6rem;
   padding: 10px;
   width: 100%;
   color: rgba(255, 0, 0, 0.76);
@@ -342,12 +342,30 @@ picture {
   padding: 10px;
   border-radius: 20px;
   color: white;
-  border: 1px solid white;
+  border: 2px solid white;
   background-color: #96bf0fe1;
+}
+
+.reserve-form input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1);
 }
 
 .reserve-form input[type="submit"] {
   color: #96bf0fe1;
   background-color: white;
   border: 1px solid #96bf0fe1;
+}
+
+.reserve-form select {
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  background: url("data:image/svg+xml,<svg height='10px' width='10px' viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'><path d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/></svg>") no-repeat;
+  padding: 10px 32px 10px 10px;
+  background-color: #96bf0fe1;
+  background-position: calc(100% - 12px) center;
+}
+
+.reserve-form option {
+  background-color: white;
 }
